# veriguard-implant

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/cleanup/: mod.rs  self_delete.rs
src/payload/: command.rs  dns_resolution.rs  executable.rs  filedrop.rs  mod.rs  network_traffic.rs
src/process/: command_exec.rs
src/result/: writer.rs
src/tests/: mod.rs  payload_size_tests.rs
src/tests/process/: command_exec_tests.rs
testdata/: webshell_sample.php
tests/: integration.rs
