[package]
name = "veriguard-implant"
version = "0.1.0"
edition = "2021"
description = "Veriguard 对手模拟 implant (forked from OpenAEV-Platform/implant@3b16615e9)"
license = "Apache-2.0"


[dependencies]
reqwest = { version = "0.12.28", features = ["blocking", "rustls-tls", "rustls-tls-native-roots", "json"], default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.140" }
log = { version = "0.4.21", features = ["kv"] }
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.4"
rolling-file = "0.2.0"
clap = { version = "4.5.7", features = ["derive"] }
mailparse = "0.16.0"
percent-encoding = "2.3.2"
rustls-webpki = ">0.103.12"
humantime = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.14.0"
